rerun notebooks with few mods to work on current devel

--- a/doc/source/users/tutorials/hess_dr1/bkgmodel.ipynb
+++ b/doc/source/users/tutorials/hess_dr1/bkgmodel.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,7 @@
     "bkgmodel['instrument'] = 'HESS'\n",
     "bkgmodel['spatial'] = 'GAUSS'\n",
     "bkgmodel['gradient'] = True\n",
+    "bkgmodel['spectral'] = 'NODES'\n",
     "bkgmodel['ebinalg'] = 'LOG'\n",
     "bkgmodel['emin'] = 0.7\n",
     "bkgmodel['emax'] = 30.\n",
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,26 +96,26 @@
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
       " Number of parameters ......: 20\n",
       " Number of spatial par's ...: 3\n",
-      "  1:Sigma ..................: 3.19679118852325 +/- 0.148784221714502 [7.71728e-08,infty[ deg2 (free,scale=1,gradient)\n",
-      "  2:Grad_DETX ..............: 0.0882131070561384 +/- 0.0223563997131535 deg^-1 (free,scale=1,gradient)\n",
-      "  2:Grad_DETY ..............: -0.000692481271743188 +/- 0.0227254581791992 deg^-1 (free,scale=1,gradient)\n",
+      "  1:Sigma ..................: 3.19679080604377 +/- 0.148784168613255 [7.71728e-08,infty[ deg2 (free,scale=1,gradient)\n",
+      "  2:Grad_DETX ..............: 0.0882131417987659 +/- 0.0223563994341903 deg^-1 (free,scale=1,gradient)\n",
+      "  2:Grad_DETY ..............: -0.000692474001567828 +/- 0.0227254580377688 deg^-1 (free,scale=1,gradient)\n",
       " Number of spectral par's ..: 16\n",
       "  Energy0 ..................: 700000 [7e-05,infty[ MeV (fixed,scale=700000)\n",
-      "  Intensity0 ...............: 0.00149714476600658 +/- 0.000185798282794166 [9.46696076103918e-14,infty[ ph/cm2/s/MeV (free,scale=0.000946696076103918,gradient)\n",
+      "  Intensity0 ...............: 0.00140372802004064 +/- 0.000174205101284546 [8.87696769787525e-14,infty[ ph/cm2/s/MeV (free,scale=0.000887696769787525,gradient)\n",
       "  Energy1 ..................: 1197413.67463685 [0.000119741367463685,infty[ MeV (fixed,scale=1197413.67463685)\n",
-      "  Intensity1 ...............: 0.000275025454049597 +/- 1.50407490107521e-05 [3.11144874586726e-14,infty[ ph/cm2/s/MeV (free,scale=0.000311144874586726,gradient)\n",
+      "  Intensity1 ...............: 0.000257864797984792 +/- 1.41022572545599e-05 [2.91749105398033e-14,infty[ ph/cm2/s/MeV (free,scale=0.000291749105398033,gradient)\n",
       "  Energy2 ..................: 2048285.01172474 [0.000204828501172474,infty[ MeV (fixed,scale=2048285.01172474)\n",
-      "  Intensity2 ...............: 9.68931866899334e-05 +/- 5.86314382972939e-06 [1.02262104412654e-14,infty[ ph/cm2/s/MeV (free,scale=0.000102262104412654,gradient)\n",
+      "  Intensity2 ...............: 9.08473780602549e-05 +/- 5.49730339459174e-06 [9.58858288072014e-15,infty[ ph/cm2/s/MeV (free,scale=9.58858288072014e-05,gradient)\n",
       "  Energy3 ..................: 3503777.83227556 [0.000350377783227556,infty[ MeV (fixed,scale=3503777.83227556)\n",
-      "  Intensity3 ...............: 3.42414862721453e-05 +/- 2.61283857499118e-06 [3.36098674702412e-15,infty[ ph/cm2/s/MeV (free,scale=3.36098674702412e-05,gradient)\n",
+      "  Intensity3 ...............: 3.21049333853292e-05 +/- 2.44980628805133e-06 [3.15136944584645e-15,infty[ ph/cm2/s/MeV (free,scale=3.15136944584645e-05,gradient)\n",
       "  Energy4 ..................: 5993530.69893743 [0.000599353069893743,infty[ MeV (fixed,scale=5993530.69893743)\n",
-      "  Intensity4 ...............: 1.2134598847599e-05 +/- 1.19969987797427e-06 [1.10463518999066e-15,infty[ ph/cm2/s/MeV (free,scale=1.10463518999066e-05,gradient)\n",
+      "  Intensity4 ...............: 1.13774407454204e-05 +/- 1.12484264580111e-06 [1.03572441389469e-15,infty[ ph/cm2/s/MeV (free,scale=1.03572441389469e-05,gradient)\n",
       "  Energy5 ..................: 10252479.454662 [0.0010252479454662,infty[ MeV (fixed,scale=10252479.454662)\n",
-      "  Intensity5 ...............: 4.80035386464156e-06 +/- 6.14208278785316e-07 [3.63053768077518e-16,infty[ ph/cm2/s/MeV (free,scale=3.63053768077518e-06,gradient)\n",
+      "  Intensity5 ...............: 4.50082783670747e-06 +/- 5.75883736185608e-07 [3.40399651634425e-16,infty[ ph/cm2/s/MeV (free,scale=3.40399651634425e-06,gradient)\n",
       "  Energy6 ..................: 17537798.7113509 [0.00175377987113509,infty[ MeV (fixed,scale=17537798.7113509)\n",
-      "  Intensity6 ...............: 8.5455367005893e-07 +/- 1.75301261074233e-07 [1.19322686539072e-16,infty[ ph/cm2/s/MeV (free,scale=1.19322686539072e-06,gradient)\n",
+      "  Intensity6 ...............: 8.01232298563249e-07 +/- 1.64363032163644e-07 [1.11875245266372e-16,infty[ ph/cm2/s/MeV (free,scale=1.11875245266372e-06,gradient)\n",
       "  Energy7 ..................: 30000000 [0.003,infty[ MeV (fixed,scale=30000000)\n",
-      "  Intensity7 ...............: 2.8110106615004e-07 +/- 1.02501352381156e-07 [3.92170658310361e-17,infty[ ph/cm2/s/MeV (free,scale=3.92170658310361e-07,gradient)\n",
+      "  Intensity7 ...............: 2.63561241594543e-07 +/- 9.61055896032478e-08 [3.67687523865408e-17,infty[ ph/cm2/s/MeV (free,scale=3.67687523865408e-07,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
       "=== GCTAModelBackground ===\n",
@@ -126,26 +127,26 @@
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
       " Number of parameters ......: 20\n",
       " Number of spatial par's ...: 3\n",
-      "  1:Sigma ..................: 3.30082205953218 +/- 0.156912956620767 [7.71728e-08,infty[ deg2 (free,scale=1,gradient)\n",
-      "  2:Grad_DETX ..............: 0.0153115422362867 +/- 0.0215680816698383 deg^-1 (free,scale=1,gradient)\n",
-      "  2:Grad_DETY ..............: -0.00906905077562078 +/- 0.0213184759257543 deg^-1 (free,scale=1,gradient)\n",
+      "  1:Sigma ..................: 3.30082209234815 +/- 0.156912961568416 [7.71728e-08,infty[ deg2 (free,scale=1,gradient)\n",
+      "  2:Grad_DETX ..............: 0.0153115021206004 +/- 0.0215680817043072 deg^-1 (free,scale=1,gradient)\n",
+      "  2:Grad_DETY ..............: -0.00906905504246978 +/- 0.0213184758960865 deg^-1 (free,scale=1,gradient)\n",
       " Number of spectral par's ..: 16\n",
       "  Energy0 ..................: 700000 [7e-05,infty[ MeV (fixed,scale=700000)\n",
-      "  Intensity0 ...............: 0.00115207913907334 +/- 6.11872558313686e-05 [8.950257713407e-14,infty[ ph/cm2/s/MeV (free,scale=0.0008950257713407,gradient)\n",
+      "  Intensity0 ...............: 0.00107656542145505 +/- 5.71767004891641e-05 [8.36211165467046e-14,infty[ ph/cm2/s/MeV (free,scale=0.000836211165467046,gradient)\n",
       "  Energy1 ..................: 1197413.67463685 [0.000119741367463685,infty[ MeV (fixed,scale=1197413.67463685)\n",
-      "  Intensity1 ...............: 0.000216074985117796 +/- 1.14346974881101e-05 [2.82228203274059e-14,infty[ ph/cm2/s/MeV (free,scale=0.000282228203274059,gradient)\n",
+      "  Intensity1 ...............: 0.00020191222774409 +/- 1.06852037575173e-05 [2.63699934530969e-14,infty[ ph/cm2/s/MeV (free,scale=0.000263699934530969,gradient)\n",
       "  Energy2 ..................: 2048285.01172474 [0.000204828501172474,infty[ MeV (fixed,scale=2048285.01172474)\n",
-      "  Intensity2 ...............: 9.80980717622882e-05 +/- 6.14243331439364e-06 [8.8994933189452e-15,infty[ ph/cm2/s/MeV (free,scale=8.8994933189452e-05,gradient)\n",
+      "  Intensity2 ...............: 9.16681754173992e-05 +/- 5.73982387509952e-06 [8.31580088180217e-15,infty[ ph/cm2/s/MeV (free,scale=8.31580088180217e-05,gradient)\n",
       "  Energy3 ..................: 3503777.83227556 [0.000350377783227556,infty[ MeV (fixed,scale=3503777.83227556)\n",
-      "  Intensity3 ...............: 2.64302082334315e-05 +/- 2.27978082923659e-06 [2.80627451173057e-15,infty[ ph/cm2/s/MeV (free,scale=2.80627451173057e-05,gradient)\n",
+      "  Intensity3 ...............: 2.4697825754506e-05 +/- 2.13035134581624e-06 [2.62239520190935e-15,infty[ ph/cm2/s/MeV (free,scale=2.62239520190935e-05,gradient)\n",
       "  Energy4 ..................: 5993530.69893743 [0.000599353069893743,infty[ MeV (fixed,scale=5993530.69893743)\n",
-      "  Intensity4 ...............: 1.03353701064884e-05 +/- 1.13230244143927e-06 [8.84901685180661e-16,infty[ ph/cm2/s/MeV (free,scale=8.84901685180661e-06,gradient)\n",
+      "  Intensity4 ...............: 9.65793108295259e-06 +/- 1.0580848901101e-06 [8.26974658573933e-16,infty[ ph/cm2/s/MeV (free,scale=8.26974658573933e-06,gradient)\n",
       "  Energy5 ..................: 10252479.454662 [0.0010252479454662,infty[ MeV (fixed,scale=10252479.454662)\n",
-      "  Intensity5 ...............: 3.57899467682822e-06 +/- 5.03727665165389e-07 [2.79035778275547e-16,infty[ ph/cm2/s/MeV (free,scale=2.79035778275547e-06,gradient)\n",
+      "  Intensity5 ...............: 3.34440698323729e-06 +/- 4.70710485211692e-07 [2.60787193869763e-16,infty[ ph/cm2/s/MeV (free,scale=2.60787193869763e-06,gradient)\n",
       "  Energy6 ..................: 17537798.7113509 [0.00175377987113509,infty[ MeV (fixed,scale=17537798.7113509)\n",
-      "  Intensity6 ...............: 5.95101204005172e-07 +/- 1.41251129058325e-07 [8.79882667891458e-17,infty[ ph/cm2/s/MeV (free,scale=8.79882667891458e-07,gradient)\n",
+      "  Intensity6 ...............: 5.56094646218329e-07 +/- 1.31992669655457e-07 [8.22394734607041e-17,infty[ ph/cm2/s/MeV (free,scale=8.22394734607041e-07,gradient)\n",
       "  Energy7 ..................: 30000000 [0.003,infty[ MeV (fixed,scale=30000000)\n",
-      "  Intensity7 ...............: 2.81714577113613e-07 +/- 1.0384120888285e-07 [2.77453133085778e-17,infty[ ph/cm2/s/MeV (free,scale=2.77453133085778e-07,gradient)\n",
+      "  Intensity7 ...............: 2.63249520342286e-07 +/- 9.70349092695409e-08 [2.59342910774655e-17,infty[ ph/cm2/s/MeV (free,scale=2.59342910774655e-07,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
       "=== GCTAModelBackground ===\n",
@@ -157,26 +158,26 @@
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
       " Number of parameters ......: 20\n",
       " Number of spatial par's ...: 3\n",
-      "  1:Sigma ..................: 4.32704862685447 +/- 0.368685355107103 [7.71728e-08,infty[ deg2 (free,scale=1,gradient)\n",
-      "  2:Grad_DETX ..............: 0.018772378083067 +/- 0.0217106872366865 deg^-1 (free,scale=1,gradient)\n",
-      "  2:Grad_DETY ..............: -0.126627961668458 +/- 0.0204738085196433 deg^-1 (free,scale=1,gradient)\n",
+      "  1:Sigma ..................: 4.32704664084324 +/- 0.368684845846136 [7.71728e-08,infty[ deg2 (free,scale=1,gradient)\n",
+      "  2:Grad_DETX ..............: 0.0187722831939023 +/- 0.0217106880517745 deg^-1 (free,scale=1,gradient)\n",
+      "  2:Grad_DETY ..............: -0.126627824474372 +/- 0.0204738099128812 deg^-1 (free,scale=1,gradient)\n",
       " Number of spectral par's ..: 16\n",
       "  Energy0 ..................: 700000 [7e-05,infty[ MeV (fixed,scale=700000)\n",
-      "  Intensity0 ...............: 0.000915773345685034 +/- 4.89989530347851e-05 [7.43957604504927e-14,infty[ ph/cm2/s/MeV (free,scale=0.000743957604504927,gradient)\n",
+      "  Intensity0 ...............: 0.000857178811233776 +/- 4.58638205127566e-05 [6.96233895968756e-14,infty[ ph/cm2/s/MeV (free,scale=0.000696233895968756,gradient)\n",
       "  Energy1 ..................: 1197413.67463685 [0.000119741367463685,infty[ MeV (fixed,scale=1197413.67463685)\n",
-      "  Intensity1 ...............: 0.000197398656687683 +/- 1.07759903733823e-05 [2.35277778278335e-14,infty[ ph/cm2/s/MeV (free,scale=0.000235277778278335,gradient)\n",
+      "  Intensity1 ...............: 0.000184768403022439 +/- 1.008650496985e-05 [2.20204639078551e-14,infty[ ph/cm2/s/MeV (free,scale=0.000220204639078551,gradient)\n",
       "  Energy2 ..................: 2048285.01172474 [0.000204828501172474,infty[ MeV (fixed,scale=2048285.01172474)\n",
-      "  Intensity2 ...............: 6.93704083542102e-05 +/- 4.77505196699795e-06 [7.44069724086306e-15,infty[ ph/cm2/s/MeV (free,scale=7.44069724086306e-05,gradient)\n",
+      "  Intensity2 ...............: 6.49318372405173e-05 +/- 4.46952677363829e-06 [6.96462544447719e-15,infty[ ph/cm2/s/MeV (free,scale=6.96462544447719e-05,gradient)\n",
       "  Energy3 ..................: 3503777.83227556 [0.000350377783227556,infty[ MeV (fixed,scale=3503777.83227556)\n",
-      "  Intensity3 ...............: 2.57663537500693e-05 +/- 2.20136814658691e-06 [2.35313236274662e-15,infty[ ph/cm2/s/MeV (free,scale=2.35313236274662e-05,gradient)\n",
+      "  Intensity3 ...............: 2.41177375305046e-05 +/- 2.06051735828825e-06 [2.20276955948036e-15,infty[ ph/cm2/s/MeV (free,scale=2.20276955948036e-05,gradient)\n",
       "  Energy4 ..................: 5993530.69893743 [0.000599353069893743,infty[ MeV (fixed,scale=5993530.69893743)\n",
-      "  Intensity4 ...............: 6.82483279973139e-06 +/- 7.86680350899204e-07 [7.44181860564889e-16,infty[ ph/cm2/s/MeV (free,scale=7.44181860564889e-06,gradient)\n",
+      "  Intensity4 ...............: 6.388150904145e-06 +/- 7.36345188624795e-07 [6.96691268016576e-16,infty[ ph/cm2/s/MeV (free,scale=6.96691268016576e-06,gradient)\n",
       "  Energy5 ..................: 10252479.454662 [0.0010252479454662,infty[ MeV (fixed,scale=10252479.454662)\n",
-      "  Intensity5 ...............: 3.3292540797357e-06 +/- 4.68826132796518e-07 [2.35348699614757e-16,infty[ ph/cm2/s/MeV (free,scale=2.35348699614757e-06,gradient)\n",
+      "  Intensity5 ...............: 3.11624385438516e-06 +/- 4.38829996211514e-07 [2.20349296566929e-16,infty[ ph/cm2/s/MeV (free,scale=2.20349296566929e-06,gradient)\n",
       "  Energy6 ..................: 17537798.7113509 [0.00175377987113509,infty[ MeV (fixed,scale=17537798.7113509)\n",
-      "  Intensity6 ...............: 8.19437245391855e-07 +/- 1.82363529352901e-07 [7.44294013943215e-17,infty[ ph/cm2/s/MeV (free,scale=7.44294013943215e-07,gradient)\n",
+      "  Intensity6 ...............: 7.66998023710854e-07 +/- 1.70693323247103e-07 [6.9692006669998e-17,infty[ ph/cm2/s/MeV (free,scale=6.9692006669998e-07,gradient)\n",
       "  Energy7 ..................: 30000000 [0.003,infty[ MeV (fixed,scale=30000000)\n",
-      "  Intensity7 ...............: 1.44457348642334e-07 +/- 7.0968299684809e-08 [2.35384168299424e-17,infty[ ph/cm2/s/MeV (free,scale=2.35384168299424e-07,gradient)\n",
+      "  Intensity7 ...............: 1.35218346687107e-07 +/- 6.64294080047906e-08 [2.20421660943029e-17,infty[ ph/cm2/s/MeV (free,scale=2.20421660943029e-07,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
       "=== GCTAModelBackground ===\n",
@@ -188,26 +189,26 @@
       " Model components ..........: \"Multiplicative\" * \"NodeFunction\" * \"Constant\"\n",
       " Number of parameters ......: 20\n",
       " Number of spatial par's ...: 3\n",
-      "  1:Sigma ..................: 3.6479543205698 +/- 0.238749563358304 [7.71728e-08,infty[ deg2 (free,scale=1,gradient)\n",
-      "  2:Grad_DETX ..............: 0.0290086310507671 +/- 0.0231654281693484 deg^-1 (free,scale=1,gradient)\n",
-      "  2:Grad_DETY ..............: 0.165462911909218 +/- 0.0212932684624286 deg^-1 (free,scale=1,gradient)\n",
+      "  1:Sigma ..................: 3.64795431824073 +/- 0.238749562945919 [7.71728e-08,infty[ deg2 (free,scale=1,gradient)\n",
+      "  2:Grad_DETX ..............: 0.0290086296998991 +/- 0.0231654281500121 deg^-1 (free,scale=1,gradient)\n",
+      "  2:Grad_DETY ..............: 0.165462915333049 +/- 0.021293268413236 deg^-1 (free,scale=1,gradient)\n",
       " Number of spectral par's ..: 16\n",
       "  Energy0 ..................: 700000 [7e-05,infty[ MeV (fixed,scale=700000)\n",
-      "  Intensity0 ...............: 0.00147439433272687 +/- 0.000191693450881709 [8.6655214667889e-14,infty[ ph/cm2/s/MeV (free,scale=0.00086655214667889,gradient)\n",
+      "  Intensity0 ...............: 0.00138280405680456 +/- 0.000179785336701836 [8.127607193775e-14,infty[ ph/cm2/s/MeV (free,scale=0.0008127607193775,gradient)\n",
       "  Energy1 ..................: 1197413.67463685 [0.000119741367463685,infty[ MeV (fixed,scale=1197413.67463685)\n",
-      "  Intensity1 ...............: 0.000235250773930648 +/- 1.37598369145017e-05 [2.81551973223247e-14,infty[ ph/cm2/s/MeV (free,scale=0.000281551973223247,gradient)\n",
+      "  Intensity1 ...............: 0.000220636852715846 +/- 1.29050674731524e-05 [2.64069813465664e-14,infty[ ph/cm2/s/MeV (free,scale=0.000264069813465664,gradient)\n",
       "  Energy2 ..................: 2048285.01172474 [0.000204828501172474,infty[ MeV (fixed,scale=2048285.01172474)\n",
-      "  Intensity2 ...............: 9.20623251759662e-05 +/- 5.75965738880592e-06 [9.1479219028787e-15,infty[ ph/cm2/s/MeV (free,scale=9.1479219028787e-05,gradient)\n",
+      "  Intensity2 ...............: 8.63433571877371e-05 +/- 5.40186394640027e-06 [8.57975351431837e-15,infty[ ph/cm2/s/MeV (free,scale=8.57975351431837e-05,gradient)\n",
       "  Energy3 ..................: 3503777.83227556 [0.000350377783227556,infty[ MeV (fixed,scale=3503777.83227556)\n",
-      "  Intensity3 ...............: 3.22022945215284e-05 +/- 2.53414761162924e-06 [2.97225674475431e-15,infty[ ph/cm2/s/MeV (free,scale=2.97225674475431e-05,gradient)\n",
+      "  Intensity3 ...............: 3.02018682595367e-05 +/- 2.37672480959384e-06 [2.78760261918503e-15,infty[ ph/cm2/s/MeV (free,scale=2.78760261918503e-05,gradient)\n",
       "  Energy4 ..................: 5993530.69893743 [0.000599353069893743,infty[ MeV (fixed,scale=5993530.69893743)\n",
-      "  Intensity4 ...............: 1.00701723302328e-05 +/- 1.04797408736245e-06 [9.65717706221071e-16,infty[ ph/cm2/s/MeV (free,scale=9.65717706221071e-06,gradient)\n",
+      "  Intensity4 ...............: 9.44460701196062e-06 +/- 9.82873290475423e-07 [9.05705315370543e-16,infty[ ph/cm2/s/MeV (free,scale=9.05705315370543e-06,gradient)\n",
       "  Energy5 ..................: 10252479.454662 [0.0010252479454662,infty[ MeV (fixed,scale=10252479.454662)\n",
-      "  Intensity5 ...............: 3.29354066928594e-06 +/- 4.58158358563221e-07 [3.1377191413724e-16,infty[ ph/cm2/s/MeV (free,scale=3.1377191413724e-06,gradient)\n",
+      "  Intensity5 ...............: 3.08894388117525e-06 +/- 4.2969727730712e-07 [2.94267953633316e-16,infty[ ph/cm2/s/MeV (free,scale=2.94267953633316e-06,gradient)\n",
       "  Energy6 ..................: 17537798.7113509 [0.00175377987113509,infty[ MeV (fixed,scale=17537798.7113509)\n",
-      "  Intensity6 ...............: 8.71669675678694e-07 +/- 1.76346292129154e-07 [1.01947819188903e-16,infty[ ph/cm2/s/MeV (free,scale=1.01947819188903e-06,gradient)\n",
+      "  Intensity6 ...............: 8.17521009765721e-07 +/- 1.65391550069682e-07 [9.5609054143745e-17,infty[ ph/cm2/s/MeV (free,scale=9.5609054143745e-07,gradient)\n",
       "  Energy7 ..................: 30000000 [0.003,infty[ MeV (fixed,scale=30000000)\n",
-      "  Intensity7 ...............: 3.12067435753287e-07 +/- 1.11366909796179e-07 [3.31239265501224e-17,infty[ ph/cm2/s/MeV (free,scale=3.31239265501224e-07,gradient)\n",
+      "  Intensity7 ...............: 2.92681614932954e-07 +/- 1.0444872894399e-07 [3.10638352610158e-17,infty[ ph/cm2/s/MeV (free,scale=3.10638352610158e-07,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n"
      ]
