--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Simon Bonnefoy (simon.bonnefoy@desy.de)
 Johan Bregeon (johan.bregeon@lupm.in2p3.fr)
 Rolf Buehler (rolf.buehler@desy.de)
 Joshua Cardenzana (jcardenzana@irap.omp.eu)
@@ -17,4 +18,5 @@ David Sanchez (david.sanchez@lapp.in2p3.fr)
 Hubert Siejkowski (h.siejkowski@cyfronet.pl)
 Andreas Specovius (andreas.specovius@fau.de)
 Luigi Tibaldo (luigi.tibaldo@irap.omp.eu)
+Domenico Tiziani (domenico.tiziani@fau.de)
 Alexander Ziegler (alexander.ziegler@fau.de)
