--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2019-02-15
+2019-03-06
 
         * Version 1.6.0 released
         ========================
 
+        Log warning if edisp=no (#2842)
         Add max_iter parameter to ctbutterfly, cterror, ctlike, cttsmap,
           ctulimit and cstsmapsplit
         ctbkgcube now requires an input counts cube (#2763)
