--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.6.0
 
-5 February 2019
+6 March 2019
 
 
 Introduction
@@ -42,6 +42,10 @@ None
 
 Base classes
 ------------
+The ctool base class now implements a log_parameters() method that overwrites
+the base class method and that logs a warning if the tool has an "edisp"
+parameter but the parameter is set to "no" (#2842).
+
 The ctool base class now loads the application parameters from the file provided
 in the "syspfiles" folder and updates parameter values using the file found in
 the user's "pfiles" folder, so that any change to the parameter file structure
