--- a/doc/source/users/tutorials/howto/howto_combine_observations.ipynb
+++ b/doc/source/users/tutorials/howto/howto_combine_observations.ipynb
@@ -56,6 +56,8 @@
     "obssim['rad']       = 5.0\n",
     "obssim['tmin']      = 0\n",
     "obssim['tmax']      = 1800\n",
+    "obssim['emin']      = 0.1\n",
+    "obssim['emax']      = 100.0\n",
     "obssim['caldb']     = 'prod2'\n",
     "obssim['irf']       = 'South_0.5h'\n",
     "obssim['inmodel']   = '$CTOOLS/share/models/crab.xml'\n",
@@ -69,6 +71,8 @@
     "obssim['rad']       = 5.0\n",
     "obssim['tmin']      = 1800\n",
     "obssim['tmax']      = 3600\n",
+    "obssim['emin']      = 0.1\n",
+    "obssim['emax']      = 100.0\n",
     "obssim['caldb']     = 'prod2'\n",
     "obssim['irf']       = 'South_0.5h'\n",
     "obssim['inmodel']   = '$CTOOLS/share/models/crab.xml'\n",
@@ -176,8 +180,8 @@
       "=== GObservations ===\n",
       " Number of observations ....: 2\n",
       " Number of models ..........: 2\n",
-      " Number of observed events .: 47146\n",
-      " Number of predicted events : 47145.999611735\n"
+      " Number of observed events .: 48094\n",
+      " Number of predicted events : 48093.9954936259\n"
      ]
     }
    ],
@@ -202,7 +206,7 @@
      "output_type": "stream",
      "text": [
       "=== GOptimizerLM ===\n",
-      " Optimized function value ..: 315261.211\n",
+      " Optimized function value ..: 320268.838\n",
       " Absolute precision ........: 0.005\n",
       " Acceptable value decrease .: 2\n",
       " Optimization status .......: converged\n",
