--- a/doc/source/users/tutorials/howto/howto_stacked_analysis.ipynb
+++ b/doc/source/users/tutorials/howto/howto_stacked_analysis.ipynb
@@ -64,7 +64,7 @@
     "evbin['emin']     = 0.1    # TeV\n",
     "evbin['emax']     = 100.0  # TeV\n",
     "evbin['enumbins'] = 20\n",
-    "evbin['outcube']  = 'cntcube.fits'\n",
+    "evbin['outobs']   = 'cntcube.fits'\n",
     "evbin.execute()"
    ]
   },
@@ -259,7 +259,7 @@
      "output_type": "stream",
      "text": [
       "=== GOptimizerLM ===\n",
-      " Optimized function value ..: 86553.855\n",
+      " Optimized function value ..: 87667.270\n",
       " Absolute precision ........: 0.005\n",
       " Acceptable value decrease .: 2\n",
       " Optimization status .......: converged\n",
@@ -298,8 +298,8 @@
       "  RA .......................: 83.6331 [-360,360] deg (fixed,scale=1)\n",
       "  DEC ......................: 22.0145 [-90,90] deg (fixed,scale=1)\n",
       " Number of spectral par's ..: 3\n",
-      "  Prefactor ................: 5.62952701160697e-16 +/- 7.07175778597347e-18 [1e-23,1e-13] ph/cm2/s/MeV (free,scale=1e-16,gradient)\n",
-      "  Index ....................: -2.47209940591081 +/- 0.0109407678001334 [-0,-5]  (free,scale=-1,gradient)\n",
+      "  Prefactor ................: 5.7351470584048e-16 +/- 7.15792803493375e-18 [1e-23,1e-13] ph/cm2/s/MeV (free,scale=1e-16,gradient)\n",
+      "  Index ....................: -2.45746587500157 +/- 0.010743485688059 [-0,-5]  (free,scale=-1,gradient)\n",
       "  PivotEnergy ..............: 300000 [10000,1000000000] MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n",
@@ -311,8 +311,8 @@
       " Model type ................: \"PowerLaw\" * \"Constant\"\n",
       " Number of parameters ......: 4\n",
       " Number of spectral par's ..: 3\n",
-      "  Prefactor ................: 1.02657265819585 +/- 0.0114880816442995 [0.01,100] ph/cm2/s/MeV (free,scale=1,gradient)\n",
-      "  Index ....................: 0.0148786718904421 +/- 0.00677272256425586 [-5,5]  (free,scale=1,gradient)\n",
+      "  Prefactor ................: 1.02157245578124 +/- 0.0113974414365358 [0.01,100] ph/cm2/s/MeV (free,scale=1,gradient)\n",
+      "  Index ....................: 0.00968334444956244 +/- 0.00675463165472791 [-5,5]  (free,scale=1,gradient)\n",
       "  PivotEnergy ..............: 1000000 MeV (fixed,scale=1000000,gradient)\n",
       " Number of temporal par's ..: 1\n",
       "  Normalization ............: 1 (relative value) (fixed,scale=1,gradient)\n"
