--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -131,6 +131,7 @@ New features
 Clean up
 --------
 
+* Move ``ctool::set_obs_bounds()`` to ``ctobservation::set_obs_bounds()``
 * [`2758 <https://cta-redmine.irap.omp.eu/issues/2758>`_] -
   CTA background rates are now per ontime
 * Remove ``ctools::is_valid_filename()`` method
