Update second section of How Tos

--- a/doc/source/users/tutorials/howto/howto_prepare_1dc.ipynb
+++ b/doc/source/users/tutorials/howto/howto_prepare_1dc.ipynb
@@ -50,14 +50,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: CTADATA=/Users/jurgen/1dc\n",
-      "env: CALDB=/Users/jurgen/1dc/caldb\n"
+      "env: CTADATA=/project-data/cta/data/1dc\n",
+      "env: CALDB=/project-data/cta/data/1dc/caldb\n"
      ]
     }
    ],
    "source": [
-    "%env CTADATA=/Users/jurgen/1dc\n",
-    "%env CALDB=/Users/jurgen/1dc/caldb"
+    "%env CTADATA=/project-data/cta/data/1dc\n",
+    "%env CALDB=/project-data/cta/data/1dc/caldb"
    ]
   },
   {
@@ -138,7 +138,7 @@
     "binning['emin']     = 1.0\n",
     "binning['emax']     = 100.0\n",
     "binning['enumbins'] = 20\n",
-    "binning['outcube']  = 'cntcube.fits'\n",
+    "binning['outobs']   = 'cntcube.fits'\n",
     "binning.execute()"
    ]
   },
