--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2019-04-03
+2019-04-14
 
         * Version 1.6.0 released
         ========================
 
+        Add GAUSS(E) model to csbkgmodel (#2868)
         Move ctool::set_obs_bounds() to ctobservation::set_obs_bounds()
         Log warning if edisp=no (#2842)
         Fix ring background computation in ctskymap for small roiradius (#2839)
