--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -46,6 +46,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2878 <https://cta-redmine.irap.omp.eu/issues/2878>`_] -
+  Add more spatial models to :ref:`csbkgmodel`
 * [`2868 <https://cta-redmine.irap.omp.eu/issues/2868>`_] -
   Add ``GAUSS(E)`` model to :ref:`csbkgmodel`
 * [`2842 <https://cta-redmine.irap.omp.eu/issues/2842>`_] -
