--- a/doc/source/users/tutorials/hess_dr1/selecting_events.ipynb
+++ b/doc/source/users/tutorials/hess_dr1/selecting_events.ipynb
@@ -49,16 +49,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obsfile = \"obs_crab_selected.xml\"\n",
-    "\n",
-    "select = ctools.ctselect()\n",
+    "obsfile = 'obs_crab_selected.xml'\n",
+    "select  = ctools.ctselect()\n",
     "select['usethres'] = 'DEFAULT'\n",
-    "select['inobs'] = '$HESSDATA/obs/obs_crab.xml'\n",
-    "select['emin'] = 'INDEF' # no manual energy selection\n",
-    "select['rad'] = 2 # by default select around pointing direction of each observations\n",
-    "select['tmin'] = 'INDEF' # no temporal selection\n",
-    "select['outobs'] = obsfile\n",
-    "\n",
+    "select['inobs']    = '$HESSDATA/obs/obs_crab.xml'\n",
+    "select['emin']     = 'INDEF' # no manual energy selection\n",
+    "select['rad']      = 2 # by default select around pointing direction of each observations\n",
+    "select['tmin']     = 'INDEF' # no temporal selection\n",
+    "select['outobs']   = obsfile\n",
     "select.execute()"
    ]
   },
@@ -232,6 +230,13 @@
     "\n",
     "The overall energy range that you will from now on use for the data analysis is 0.66 - 100 TeV. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -250,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
