--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -22,6 +22,8 @@ In particular, this release provides:
 Bug fixes
 ---------
 
+* [`2883 <https://cta-redmine.irap.omp.eu/issues/2883>`_] -
+  :ref:`csresspec` now also works for observation specific models
 * [`2839 <https://cta-redmine.irap.omp.eu/issues/2839>`_] -
   Fix ring background computation in :ref:`ctskymap` for small roiradius
 * [`2721 <https://cta-redmine.irap.omp.eu/issues/2721>`_] -
