--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-05-11
+
+        * Bug fix version 1.5.3 released
+        ================================
+
+        Only for compliance with GammaLib 1.5.3
+
+
 2018-04-26
 
         * Bug fix version 1.5.2 released
