--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-05-15
+
+        * Bug fix version 1.5.4 released
+        ================================
+
+        Only for compliance with GammaLib 1.5.4
+
+
 2019-05-11
 
         * Bug fix version 1.5.3 released
